# odl-video-service

./: .coveragerc  .env.example  .eslintrc  .flowconfig  .gitignore  .istanbul.yml  .pre-commit-config.yaml  .sass-lint.yml  .secrets.baseline  .travis.yml  .yarnrc  AGENTS.md  Dockerfile  Dockerfile-nb  Dockerfile-node  Procfile  README-keycloak.md  README.md  README.rst  RELEASE.rst  app.json  apt.txt  conftest.py  dev-requirements.txt  docker-compose-notebook.yml  docker-compose-travis.yml  docker-compose.yml  drf_lint_baseline.json  hot-reload-dev-server.js  keycloak_utils.py  manage.py  package.json  pylintrc  pyproject.toml  pytest.ini  renovate.json  requirements.in  requirements.txt  test_requirements.txt  tox.ini  (+6 more)
.github/workflows/: ci.yml
.plandex/: project.json
cloudsync/: api.py  api_test.py  apps.py  conftest.py  dropbox_api.py  dropbox_api_test.py  dropbox_transfer.py  dropbox_transfer_test.py  exceptions.py  tasks.py  tasks_test.py  urls.py  utils.py  views.py  views_test.py  youtube.py  youtube_test.py
cloudsync/management/commands/: backfill_shorts.py  createpresets.py  oauthtokens.py  upload_local_video.py
config/: et_hls_presets.json  et_mp4_preset.json  et_presets.json  hls.json  mediaconvert.json  mediaconvert_portrait.json  nginx.conf  nginx.conf.erb  results.json
config/keycloak/realms/: ol-local-realm.json  ovs-local-realm.json
config/keycloak/tls/: README.md  oidc-signing-pub.pem  oidc-signing.crt  oidc-signing.key
docs/rfcs/: 0001-video-retranscoding.md
docs/superpowers/specs/: 2026-06-04-resumable-dropbox-to-s3-design.md  2026-06-15-upload-lock-refactor-design.md
flow-typed/npm/: redux_v5.x.x.js
mail/: admin.py  api.py  api_test.py  apps.py  constants.py  exceptions.py  models.py  tasks.py  tasks_test.py  utils.py  utils_test.py
mail/migrations/: 0001_initial.py  0002_default_email_templates.py  0003_default_email_templates.py  0004_add_timestamps.py  0005_delete_notificationemail.py
mail/templates/: email_base.html
mail/templates/invalid_format_error/: body.html  subject.txt
mail/templates/other_error/: body.html  subject.txt
mail/templates/sample/: body.html  subject.txt
mail/templates/success/: body.html  subject.txt
odl_video/: __init__.py  aqueduct_settings.py  celery.py  constants.py  context_processors.py  envs.py  envs_test.py  logging.py  middleware.py  models.py  models_test.py  pipeline.py  pipeline_test.py  sentry.py  settings.py  settings_aqueduct.py  settings_aqueduct_dev.py  test_settings.py  test_utils.py  urls.py  urls_healthcheck.py  urls_healthcheck_test.py  utils.py  wsgi.py
s3_sync/: s3_sync.py  s3_sync_settings.ini
scripts/test/: detect_missing_migrations.sh  js_test.sh  no_auto_migrations.sh  python_tests.sh
static/js/: Router.js  babelhook.js  constants.js  global_init.js
static/js/actions/: collectionUi.js  collectionsPagination.js  collectionsPagination_test.js  commonUi.js  edxEndpoints.js  edxEndpoints_test.js  index.js  toast.js  videoDetailUi.js  videoSubtitleUi.js  videoUi.js
static/js/components/: ErrorMessage.js  ErrorMessage_test.js  FAQ.js  FAQ_test.js  Footer.js  Footer_test.js  HTML5VideoPlayer.js  HTML5VideoPlayer_test.js  OVSToolbar.js  PaginatedVideoList.js  PaginatedVideoList_test.js  Paginator.js  Paginator_test.js  USwitchPlayer.js  USwitchPlayer_test.js  VideoCard.js  VideoCard_test.js  VideoList.js  VideoList_test.js  VideoPlayer.js  VideoPlayer_test.js  VideoSaverScript.js  VideoSubtitleCard.js  VideoSubtitleCard_test.js  errorMessages.js
static/js/containers/: App.js  App_test.js  CollectionDetailPage.js  CollectionDetailPage_test.js  CollectionListPage.js  CollectionsApp.js  (+19 more)
static/scss/: _breakpoints.scss  _variables.scss  collection.scss  errorPage.scss  footer.scss  generalStyles.scss  header.scss  help-page.scss  layout.scss  mdlDataTable.scss  paginator.scss  sideDrawer.scss  terms-page.scss  toast.scss  videoDetail.scss  videoPlayer.scss
techtv2ovs/: admin.py  constants.py  factories.py  models.py  tasks.py  tasks_test.py  utils.py  utils_test.py
techtv2ovs/migrations/: 0001_initial.py  0002_add_timestamps.py
tests/cloudsync/: conftest.py  test_tasks.py
tests/ui/: conftest.py  test_models.py  test_views.py
travis/: Dockerfile-travis-watch  Dockerfile-travis-watch-build  Dockerfile-travis-web  js_tests.sh  update-docker-hub.sh
ui/: admin.py  admin_test.py  api.py  api_test.py  apps.py  conftest.py  constants.py  encodings.py  exceptions.py  factories.py  filters.py  forms.py  keycloak_utils.py  models.py  models_test.py  moira_util.py  pagination.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  util.py  utils.py  utils_test.py  views.py  views_test.py
ui/migrations/: 0001_initial.py  0002_add_moira_lists.py  0002_allow_blanks.py  0003_add_videofile.py  0004_add_videothumbnail.py  0005_video_statuses.py  0006_video_multiangle.py  0007_collections.py  0008_video_statuses.py  0009_moira_lists.py  0010_video_default_sort.py  0011_collection_created_at.py  0012_collection_default_created_at.py  0013_videosubtitle.py  0014_video_permissions.py  0015_youtubevideo.py  0016_collection_stream_source.py  0017_require_video_title.py  0018_youtubevideo_created_at.py  0019_add_timestamps.py  0019_collection_name.py  0020_collection_name.py  0021_video_source_url.py  0022_video_custom_order.py  0023_collection_allow_share_openedx.py  0024_add_collection_edx_course_id.py  0025_preset_id_textfield.py  0025_schedule_retranscode.py  0026_schedule_retranscode.py  0027_edx_course_admin_group.py  0028_add_edx_endpoint_models.py  0029_logged_in_only.py  0030_edxendpoint_expires_in.py  0031_replace_global_default_endpoints.py  0032_encryption_fields_sizing.py  0033_rename_hls_api_path_to_edx_video_api_path.py  0034_add_unique_together.py  0035_encodejob.py  0036_alter_encodejob_message.py  0036_video_duration.py  (+9 more)
ui/templates/: base.html  error.html  index.html  upload.html  video_detail.html  video_list.html  view.html
ui/templatetags/: render_bundle.py  render_bundle_test.py
(+153 files in other folders)
