[tool.poetry]
name = "odl-video-service"
version = "0.70.0"
description = "building blocks for a basic video service for ODL"
authors = ["Your Name <you@example.com>"]
license = "BSD-3"
readme = "README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.9.0"
boto3 = "^1.36.21"
celery = "^5.2.2"
celery-redbeat = "^2.0.0"
cryptography = "^44.0.0"
dj-database-url = "^2.0.0"
dj-static = "^0.0.6"
django = "4.2.23"
django-encrypted-model-fields = "^0.6.5"
django-hijack = "^3.7.1"
django-redis = ">=5.4.0,<5.5.0"
django-shibboleth-remoteuser = {git = "https://github.com/Brown-University-Library/django-shibboleth-remoteuser", tag = "v0.12"}
django-webpack-loader = "^3.0.0"
djangorestframework = "^3.11.2"
google-api-python-client = "^2.58.0"
google-auth = "^2.11.0"
google-auth-oauthlib = "^0.8.0"
html5lib = "^1.1"
httplib2 = "^0.22.0"
ipython = "^9.0.0"
mit-moira = {git = "https://github.com/mitodl/mit-moira", tag = "v0.0.4"}
newrelic = "^8.8.0"
psycopg2 = "^2.9.10"
pycountry = "^22.3.5"
python-dateutil = "^2.8.1"
pytz = "^2023.3"
redis = "^4.4.4"
requests = "^2.20.0"
sentry-sdk = "^2.0.0"
smart-open = "^7.1.0"
structlog = "^20.1.0"
structlog-sentry = "^1.2.2"
urllib3 = "^2.0.0"
uwsgi = "2.0.30"
mitol-django-transcoding = "^2025.5.21"
django-filter = "^25.1"


[tool.poetry.group.dev.dependencies]
bpython = "*"
ddt = "^1.6.0"
django-debug-toolbar = "<6"
factory-boy = "^3.3.3"
faker = "^37.0.0"
ipdb = "<0.14"
moto = "^5.0.28"
nplusone = "^1.0.0"
pdbpp = "^0.11.0"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-env = "^0.8.0"
pytest-mock = "^3.10.0"
pytest-pep8 = "^1.0.6"
requests-mock = "^1.10.0"
semantic-version = "^2.10.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
