[project]
name = "odl-video-service"
version = "0.70.0"
description = "building blocks for a basic video service for ODL"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "BSD-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.9.0,<5",
    "boto3>=1.36.21,<2",
    "celery>=5.2.2,<6",
    "celery-redbeat>=2.0.0,<3",
    "cryptography>=46.0.0,<47",
    "dj-database-url>=3.0.0,<4",
    "dj-static>=0.0.6,<0.0.7",
    "django==4.2.28",
    "django-encrypted-model-fields>=0.6.5,<0.7",
    "django-hijack>=3.7.1,<4",
    "django-redis>=5.4.0,<5.5.0",
    "django-shibboleth-remoteuser",
    "django-webpack-loader>=3.0.0,<4",
    "djangorestframework>=3.11.2,<4",
    "google-api-python-client>=2.58.0,<3",
    "google-auth>=2.11.0,<3",
    "google-auth-oauthlib>=1.0.0,<2",
    "html5lib>=1.1,<2",
    "httplib2>=0.31.0,<0.32",
    "ipython>=9.0.0,<10",
    "mit-moira",
    "psycopg2>=2.9.10,<3",
    "pycountry>=24.0.0,<25",
    "python-dateutil>=2.8.1,<3",
    "pytz>=2025.2,<2026",
    "redis>=6.0.0,<7",
    "requests>=2.20.0,<3",
    "sentry-sdk>=2.0.0,<3",
    "smart-open>=7.1.0,<8",
    "structlog>=25.0.0,<26",
    "structlog-sentry>=2.0.0,<3",
    "urllib3>=2.0.0,<3",
    "uwsgi==2.0.31",
    "mitol-django-transcoding>=2025.5.21,<2026",
    "django-filter>=25.1,<26",
    "setuptools>=80.0.0,<81",
]

[dependency-groups]
dev = [
    "bpython",
    "ddt>=1.6.0,<2",
    "factory-boy>=3.3.3,<4",
    "faker>=37.0.0,<38",
    "ipdb<0.14",
    "moto>=5.0.28,<6",
    "nplusone>=1.0.0,<2",
    "pdbpp>=0.11.0,<0.12",
    "pytest>=8.0.0,<9",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-mock>=3.10.0,<4",
    "pytest-pep8>=1.0.6,<2",
    "requests-mock>=1.10.0,<2",
    "semantic-version>=2.10.0,<3",
    "ruff>=0.14.0,<0.15",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
django-shibboleth-remoteuser = { git = "https://github.com/Brown-University-Library/django-shibboleth-remoteuser", tag = "v0.12" }
mit-moira = { git = "https://github.com/mitodl/mit-moira", tag = "v0.0.4" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
