[project]
name = "odl-video-service"
version = "0.92.0"
description = "building blocks for a basic video service for ODL"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "BSD-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.9.0,<5",
    "boto3>=1.36.21,<2",
    "celery>=5.2.2,<6",
    "celery-redbeat>=2.0.0,<3",
    "cryptography>=48.0.1,<49",
    "dj-database-url>=3.0.0,<4",
    "dj-static>=0.0.6,<0.0.7",
    "django==4.2.30",
    "django-encrypted-model-fields>=0.6.5,<0.7",
    "django-health-check>=3.24.0,<4",
    "django-hijack>=3.7.1,<4",
    "django-redis>=6.0.0,<7",
    "django-webpack-loader>=3.0.0,<4",
    "djangorestframework>=3.11.2,<4",
    "google-api-python-client>=2.58.0,<3",
    "google-auth>=2.11.0,<3",
    "google-auth-oauthlib>=1.0.0,<2",
    "html5lib>=1.1,<2",
    "httplib2>=0.31.0,<0.32",
    "Pillow>=10.0.0,<13",
    "ipython>=9.0.0,<10",
    "psycopg2>=2.9.10,<3",
    "pycountry>=24.0.0,<25",
    "python-dateutil>=2.8.1,<3",
    "pytz>=2025.2,<2026",
    "redis>=6.0.0,<7",
    "requests>=2.20.0,<3",
    "sentry-sdk>=2.0.0,<3",
    "smart-open>=7.1.0,<8",
    "social-auth-app-django>=5.4.0,<6",
    "structlog>=25.0.0,<26",
    "mitol-django-observability>=2026.1.0",
    "urllib3>=2.0.0,<3",
    "mitol-django-transcoding>=2026.5.21.1,<2027",
    "django-filter>=25.1,<26",
    "setuptools>=80.0.0,<81",
    "granian>=2.5.4,<3",
    "django-aqueduct[vault,mitol,derivations]>=0.8.0",
]

[dependency-groups]
dev = [
    "bpython",
    "ddt>=1.6.0,<2",
    "factory-boy>=3.3.3,<4",
    "faker>=37.0.0,<38",
    "ipdb<0.14",
    "moto>=5.0.28,<6",
    "nplusone>=1.0.0,<2",
    "pdbpp>=0.12.1,<0.13",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-mock>=3.10.0,<4",
    "pytest-pep8>=1.0.6,<2",
    "requests-mock>=1.10.0,<2",
    "semantic-version>=2.10.0,<3",
    "ruff>=0.15.5,<0.16",
    "mitol-drf-lint==2026.4.2",
]

[tool.aqueduct]
# Codegen v2: static AST discovery of odl_video/settings.py plus the mitol
# EnvParser registry. Regenerate (merges into the managed regions of the
# output file, preserving hand-written code) with:
#   uv run python manage.py generate_aqueduct_settings
# CI drift check: add `--check`. Parity against the legacy module:
#   uv run python manage.py check_aqueduct_settings
modules = ["odl_video.settings"]
output = "odl_video/aqueduct_settings.py"
include_envparser = true
class_name = "AqueductSettings"
extra = "allow"
parity_model = "odl_video.aqueduct_settings:AqueductSettings"
parity_legacy = "odl_video.settings"
# Deliberate divergences, documented in odl_video/aqueduct_settings.py:
#  - LOGGING / LOG_LEVEL / DJANGO_LOG_LEVEL are injected by
#    mitol.observability.settings.logging via import_settings_modules in the
#    settings_aqueduct*.py shims (LOGGING's formatter factory must read
#    django.conf.settings.DEBUG at logging-configuration time).
#  - AWS_S3_CUSTOM_DOMAIN: the model always defines it (None when
#    STATIC_CLOUDFRONT_DIST is unset); the legacy module only defines it
#    inside the CLOUDFRONT_DIST branch.
#  - DATABASES / DEFAULT_DATABASE_CONFIG: the model uses
#    django_aqueduct.derivations.database_config, which never applies
#    sslmode to SQLite and merges (rather than clobbers) OPTIONS parsed
#    from DATABASE_URL — the legacy behaviour was a shipped bug.
#  - DATABASE_URL / ODL_VIDEO_DB_*: the legacy module reads these inline
#    while building DEFAULT_DATABASE_CONFIG and never exports them as
#    settings; the model declares them as fields so they stay configurable
#    through the source chain.
parity_ignore = [
    "LOGGING",
    "LOG_LEVEL",
    "DJANGO_LOG_LEVEL",
    "AWS_S3_CUSTOM_DOMAIN",
    "DATABASES",
    "DEFAULT_DATABASE_CONFIG",
    "DATABASE_URL",
    "ODL_VIDEO_DB_CONN_MAX_AGE",
    "ODL_VIDEO_DB_DISABLE_SSL",
]

[tool.ruff]
# odl_video/aqueduct_settings.py is generated by django-aqueduct's codegen v2.
# Its `# >>> aqueduct:generated:*` regions are rewritten verbatim by
# `manage.py generate_aqueduct_settings` (one Field(...) per line) and are
# guarded by `--check` drift detection in CI. ruff-format would re-wrap those
# long single-line Field declarations, making the on-disk file diverge from
# the generator's output and permanently tripping the drift check. Excluding
# the file keeps the generator authoritative; the file already carries a
# `# ruff: noqa` header so lint is a no-op regardless. The ruff pre-commit
# hooks and `--force-exclude` both honour this.
extend-exclude = ["odl_video/aqueduct_settings.py"]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.bumpversion]
commit = false
tag = false
parse = "(?P<release>(?:[1-9][0-9]{3})\\.(?:1[0-2]|[1-9])\\.(?:3[0-1]|[12][0-9]|[1-9]))\\.(?P<build>\\d+)"
serialize = ["{release}.{build}"]

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{MM}.{DD}"

[tool.bumpversion.parts.build]
first_value = "1"

[[tool.bumpversion.files]]
filename = "odl_video/settings.py"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """
name = "odl-video-service"
version = "{current_version}"
source = {{ virtual = "." }}"""
replace = """
name = "odl-video-service"
version = "{new_version}"
source = {{ virtual = "." }}"""
